calender-picker style adjustment for good visual appeal

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,5 +3,5 @@ body {
   @apply antialiased;
 }
 html {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Roboto", sans-serif;
 }
